--- a/source/components/main.css
+++ b/source/components/main.css
@@ -127,6 +127,10 @@ input {
   color: #222;
 }
 
+body {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
 .wrapper {
   width: 95%;
   margin: 0 auto;
@@ -595,6 +599,7 @@ input {
   font-size: 32px;
   color: #fff;
   cursor: pointer;
+  text-transform: uppercase;
 }
 
 .main__item:nth-child(-n+4) {
@@ -602,36 +607,44 @@ input {
 }
 
 .main__item:nth-child(1) {
-  background: url(../img/main/earth.svg);
+  background: url(../img/main/earth.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:nth-child(2) {
-  background: url(../img/main/arcade.svg);
+  background: url(../img/main/arcade.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:nth-child(3) {
-  background: url(../img/main/soccer.svg);
+  background: url(../img/main/soccer.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:nth-child(4) {
-  background: url(../img/main/grid.svg);
+  background: url(../img/main/grid.svg) no-repeat;
+  background-size: cover;
   padding-right: 70px;
 }
 
 .main__item:nth-child(5) {
-  background: url(../img/main/road.svg);
+  background: url(../img/main/road.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:nth-child(6) {
-  background: url(../img/main/bitmap.svg);
+  background: url(../img/main/bitmap.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:nth-child(7) {
-  background: url(../img/main/robot.svg);
+  background: url(../img/main/robot.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:nth-child(8) {
-  background: url(../img/main/fisheye.svg);
+  background: url(../img/main/fisheye.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:hover {
@@ -641,41 +654,49 @@ input {
 .main__item:hover:nth-child(1) {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(../img/main/earth.svg) no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/earth.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:hover:nth-child(2) {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(../img/main/arcade.svg) no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/arcade.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:hover:nth-child(3) {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(../img/main/soccer.svg) no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/soccer.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:hover:nth-child(4) {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(../img/main/grid.svg) no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/grid.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:hover:nth-child(5) {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(../img/main/road.svg) no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/road.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:hover:nth-child(6) {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(../img/main/bitmap.svg) no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/bitmap.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:hover:nth-child(7) {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(../img/main/robot.svg) no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/robot.svg) no-repeat;
+  background-size: cover;
 }
 
 .main__item:hover:nth-child(8) {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0.7))), url(../img/main/fisheye.svg) no-repeat;
   background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/fisheye.svg) no-repeat;
+  background-size: cover;
 }
 
 .footer {
@@ -939,10 +960,11 @@ input {
             flex-direction: column;
     -ms-flex-wrap: none;
         flex-wrap: none;
-    padding: 74px 64px 0 75px;
+    padding: 74px 30px 0 30px;
     text-align: center;
     margin-top: 48px;
     position: inherit;
+    width: 100%;
   }
   .main-intro__img {
     height: 276px;
@@ -952,7 +974,7 @@ input {
     padding: 40px 24px 227px 24px;
   }
   .main {
-    margin: 40px 24px 227px 0;
+    margin: 40px 0 227px 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -973,6 +995,13 @@ input {
   }
   .mobile-menu {
     display: block;
+  }
+  .main__item {
+    width: 100%;
+    height: calc(100px + 6vw);
+  }
+  .main__item {
+    margin-bottom: 30px;
   }
 }
 
