--- a/source/components/_header.scss
+++ b/source/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
     background: url(../img/header/backgrond.svg) no-repeat;
-    padding: 64px 165px 146px;
+    padding: 64px 13% 146px;
     width: 100%;
     background-size: cover;
     background-color: black;
@@ -29,6 +29,7 @@
     &__link {
         color: #fff;
         font-family: 'Alata', sans-serif;
+        font-size: 15px;
     }
 
     &__item:hover::after {
