--- a/source/components/config/_media.scss
+++ b/source/components/config/_media.scss
@@ -1,9 +1,6 @@
 @media (max-width: 768px) {
     .footer {
-        padding: 56px 0;
-    }
-
-    .footer {
+        padding: 56px 0;        
         @include flexiblePlacement(center, center, column, wrap);
     }
 
@@ -13,8 +10,7 @@
     }
 
     .footer__socials {
-        margin: 16px auto;
-
+        margin: 1rem auto;
     }
 
     .footer__item:not(:last-child) {
@@ -86,7 +82,7 @@
         margin-bottom: 24px;
         padding: 52px 199px 20px 20px;
         font-size: 24px;
-        filter: contrast(130%)
+        filter: contrast(115%)
     }   
 
     .main__item:nth-child(-n+4) {
@@ -108,26 +104,55 @@
     .burger-menu > span {
         position: absolute;
         right: 24px;
-        top: 45px;
+        top: 43px;
         display: block;
     }
 
-        .header__slogan {
+    .header__slogan {
         padding: 1.5rem;
+        padding-right: 2.6em;
         width: 100%;
         font-size: 40px;
         margin-top: 163px;
     }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 376px) {
     .main__item {
         padding: 53px 181px 20px 20px;
+    }
+}
+
+@media (max-width: 321px) {
+    .header__slogan {
+        font-size: 33px;
+    }
+
+    .main__item {
+        margin: 0;
+        padding: 24px 101px 15px 24px;
+    }
+
+    .main__list {
+        padding: 0 24px;
     }
 }
 
 @media (max-width: 1050px) {
     .header__list {
         display: none;
+    }
+
+    .main__item:nth-last-child(-n+4) {
+        margin-top: 24px;
+    }
+}
+
+@media (max-width: 415px) {
+    .logo,
+    .header__logo {
+        width: 144px;
+        height: 24px;
+        background-size: cover;
     }
 }
