refactor: apply prettier

--- a/source/components/config/_media.scss
+++ b/source/components/config/_media.scss
@@ -10,7 +10,7 @@
     }
 
     .footer__socials {
-        margin: 1rem auto;
+        margin: 0 auto 1rem;
     }
 
     .footer__item:not(:last-child) {
